--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
 
 </head>
 
-<body>
-  <h1><a href="{{ url_for('index')}}">Login SUAP OAuth</a></h1>
+<body class="p-3 mb-2 text-white" style="background-color: rgb(13, 20, 54)">
+  <h1 class="display-3 text-center"><a href="{{ url_for('index')}}">Login SUAP OAuth</a></h1>
 
   <div class="container">
     {% block content %} {% endblock %}
