--- a/templates/boletim.html
+++ b/templates/boletim.html
@@ -14,7 +14,9 @@
           <option value="2023">2023</option>
         </select>
       </div>
-      <button type="submit" class="btn btn-primary">Buscar</button>
+      <div class="mx-auto p-2" style="width: 0%;">
+      <button type="submit" class="btn btn-outline-info m-1">Buscar</button>
+      </div>
     </form>
   </div>
 
