--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% block content %}
     <h2>{% block title %} Login OAuth SUAP {% endblock %}</h2>
 
-        
-    <p><a href="{{url_for('login')}}">Login</a></p>
+    <form action="{{url_for('login') }}">
+        <button type="submit" class="btn btn-outline-info m-1">Login</button>
+    </form>
 
 {% endblock %}
