--- a/templates/user.html
+++ b/templates/user.html
@@ -1,21 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ user_data['nome_usual'] }} {% endblock %}</h2>
-    <img src="https://suap.ifrn.edu.br{{ user_data['url_foto_150x200'] }}" alt="foto">
+    <h2 class="display-5 text-center">{% block title %} {{ user_data['nome_usual'] }} {% endblock %}</h2>
+    <img src="https://suap.ifrn.edu.br{{ user_data['url_foto_150x200'] }}" class="rounded mx-auto d-block" alt="foto">
 
     {% for field in user_data %}
     <div class="container text-center">
         <div class="row align-items-center">
           <div class="col">
-            <p> <b>{{ field }}</b>: {{ user_data[field] }} </p>
+            <p class="blockquote"> <b>{{ field }}</b>: {{ user_data[field] }} </p>
           </div>
         </div>
       </div>
 
     {% endfor %}
-    <p><a href="{{url_for('boletim')}}">boletim</a></p>
 
-    <p><a href="{{url_for('logout')}}">Logout</a></p>
+    <div class="mx-auto p-2" style="width: 0%;">
+      <form action="{{url_for('boletim') }}">
+        <button type="submit" class="btn btn-outline-info m-1">Boletim</button>
+      </form>
+      <form action="{{url_for('logout') }}">
+        <button type="submit" class="btn btn-outline-info m-1">Logout</button>
+      </form>
+    </div>
 
 {% endblock %}
